--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🎯 Scrum Habits Tracker</h1>
+            <img src="logo.png" alt="Emendare Logo" class="logo">
+            <h1>Scrum Habits Tracker</h1>
             <p class="subtitle">Dein persönlicher Begleiter für professionelle Gewohnheiten</p>
         </header>
 
