--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
         </div>
     </div>
 
+    <!-- Footer -->
+    <footer class="app-footer">
+        <div class="footer-content">
+            <div class="privacy-info">
+                <span class="icon">🔒</span>
+                <span>Deine Daten bleiben lokal auf deinem Gerät und werden nicht übertragen.</span>
+            </div>
+            <div class="footer-links">
+                <a href="datenschutz.html">Datenschutzerklärung</a>
+                <span>|</span>
+                <span>Made with ❤️ by <strong>Emendare</strong></span>
+            </div>
+        </div>
+    </footer>
+
     <!-- Modal für Habit Details -->
     <div id="habitModal" class="modal">
         <div class="modal-content">
