--- a/datenschutz.html
+++ b/datenschutz.html
@@ -22,10 +22,10 @@
                     <h2>1. Verantwortliche Stelle</h2>
                     <p>Verantwortlich für die Datenverarbeitung dieser App ist:</p>
                     <p>
-                        <strong>Emendare GmbH</strong><br>
-                        [Ihre Adresse]<br>
-                        [PLZ, Ort]<br>
-                        E-Mail: [kontakt@emendare.de]
+                        <strong>Emendare GmbH & Co. KG</strong><br>
+                        Karlstraße 87<br>
+                        76137 Karlsruhe<br>
+                        info@emendare.de
                     </p>
                 </section>
 
