--- a/datenschutz.html
+++ b/datenschutz.html
@@ -160,8 +160,8 @@
                     <h2>14. Kontakt</h2>
                     <p>Bei Fragen zum Datenschutz können Sie uns kontaktieren:</p>
                     <p>
-                        <strong>E-Mail:</strong> [datenschutz@emendare.de]<br>
-                        <strong>Post:</strong> Emendare GmbH, [Adresse]
+                        <strong>E-Mail:</strong> info@emendare.de<br>
+                        <strong>Post:</strong> Emendare GmbH, Karlstraße 87, 76137 Karlsruhe
                     </p>
                 </section>
             </div>
